--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
+    "node-mailer": "^0.1.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "otp-generator": "^4.0.1",
     "stripe": "^16.8.0"
   }
 }
