--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.14.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
     "node-mailer": "^0.1.1",
